--- a/css/clinicCss.css
+++ b/css/clinicCss.css
@@ -5,22 +5,36 @@ html, body {
 
 .footerClass
 {
-	background-image:url(../image/footer.jpg);
+	background-image:url(../image/footer.png);
     background-repeat:no-repeat;
     background-size: contain;
-    height:250px;
+    height:120px;
     width:100%;
-    background-size:100% 250px;
-    margin:0 auto;
+    background-size:100% 120px;
+    position: absolute;
+    bottom: 0;
 }
 
 .headerClass
 {
-    background-image:url(../image/header.jpg);
+    background-image:url(../image/header.png);
     background-repeat:no-repeat;
     background-size: contain;
-    height:190px;
+    height:130px;
     width:100%;
-    background-size:100% 190px;
-    margin-top:0px;
+    background-size:100% 130px;
+    -webkit-box-shadow: 0px 0px 8px 2px #000000; /*webkit is for chrome/safari/opera*/
+       -moz-box-shadow: 0px 0px 8px 2px #000000; /*moz is for firefox*/
+            box-shadow: 0px 0px 8px 2px #000000; /*all*/
+}
+
+.headerFlowerClass
+{
+    background-image:url(../image/flower.png);
+    height:85px;
+    width:425px;
+    background-size:425px 85px;
+    position: fixed;
+    top:0px;
+    left:0px;
 }
