--- a/css/clinicCss.css
+++ b/css/clinicCss.css
@@ -1,6 +1,31 @@
 html, body {
     margin: 0px;
     padding: 0px;
+    min-width: 900px;
+}
+
+.menuClass{
+    color: #5d5139;
+    font-family: 'Raleway', sans-serif;
+    margin-right: 50px;
+    min-width: 500px;
+}
+
+.menuClass li{
+    height:24px;
+    margin-top: 85px;
+    margin-right: 40px;
+    display:inline-block;
+    float:right;
+    cursor: pointer;
+}
+
+.menuClass li:hover{
+    color: white;
+}
+
+.menuClassClicked{
+    color: white;
 }
 
 .footerClass
@@ -22,9 +47,9 @@ html, body {
     height:130px;
     width:100%;
     background-size:100% 130px;
-    position: relative;
+    position: fixed;
     top:0px;
-    z-index: 0;
+    z-index: 99;
     -webkit-box-shadow: 0px 0px 8px 2px #000000; /*webkit is for chrome/safari/opera*/
        -moz-box-shadow: 0px 0px 8px 2px #000000; /*moz is for firefox*/
             box-shadow: 0px 0px 8px 2px #000000; /*all*/
@@ -36,13 +61,34 @@ html, body {
     height:85px;
     width:425px;
     background-size:425px 85px;
-    position: absolute;
+    position: fixed;
     top:0px;
     left:0px;
-    z-index: 1;
+    z-index: 100;
 }
 
 .contentClass
 {   
+    margin-top: 130px;
     position: relative;
+    text-align: center;
+}
+
+.borderAll
+{
+    border-bottom: 1px solid red;
+    border-top: 1px solid red;
+    border-left: 1px solid red;
+    border-right: 1px solid red;
+}
+
+.loadingStartClass{
+    position: fixed;
+    top:130px;
+    height: 600px;
+    width: 100%;
+    background-image: url(../image/loading.gif);
+    opacity: 0.6;
+    z-index: 999;
+
 }
