--- a/css/clinicCss.css
+++ b/css/clinicCss.css
@@ -4,6 +4,27 @@ html, body {
     min-width: 900px;
 }
 
+.logoClass{
+    background-image:url(../image/logo.png);
+    background-repeat:no-repeat;
+    background-size: contain;
+    height:90px;
+    width:215px;
+    background-size:200px 90px;
+    position: fixed;
+    top: 2px;
+    left: 40px;
+    z-index: 9999;
+}
+
+.backGroundClass{
+    position: fixed;
+    height: 2000px;
+    width: 2000px;
+    z-index: -1;
+    background-color: #2b1e30;
+}
+
 .menuClass{
     color: #5d5139;
     font-size: 14px;
@@ -70,7 +91,7 @@ html, body {
     background-size:100% 130px;
     position: fixed;
     top:0px;
-    z-index: 99;
+    z-index: 9997;
     -webkit-box-shadow: 0px 0px 8px 2px #000000; /*webkit is for chrome/safari/opera*/
        -moz-box-shadow: 0px 0px 8px 2px #000000; /*moz is for firefox*/
             box-shadow: 0px 0px 8px 2px #000000; /*all*/
@@ -85,7 +106,7 @@ html, body {
     position: fixed;
     top:0px;
     left:0px;
-    z-index: 100;
+    z-index: 9998;
 }
 
 .contentClass
@@ -93,6 +114,8 @@ html, body {
     margin-top: 130px;
     position: relative;
     text-align: center;
+    z-index: 999;
+    background-color: white;
 }
 
 .borderAll
@@ -141,6 +164,7 @@ html, body {
 
 #nav li a { 
     color: black;
+    background-color: white;
     text-decoration: none;
     display: block;
 }
@@ -154,24 +178,30 @@ html, body {
 .mainLiClass{
     line-height: 50px;
     min-height: 50px;
-    border-bottom: 2px solid #d6cdbd;
 }
 
 .mainLiClass a:hover{
+    background-color: #d6cdbd !important;
     margin-top: 3px;
     display: block;
     height: 44px;
-    background-color: #d6cdbd;
 }
 
 .subUlClass a:hover{
-    background-color: #eeeeee;
-    margin-bottom: 5px;
+    background-color: #eeeeee !important;
+    margin-bottom: 3px;
 }
 
 .subUlClass li{
     min-height: 40px;
 }
+
+.subUlClass li a{
+    min-height: 40px;
+    background-color: white;
+    display: block;
+}
+
 
 .servicesPClass{
     margin-left: 50px;
@@ -183,5 +213,70 @@ html, body {
     margin-top: 3px;
     display: block;
     height: 44px;
+    background-color: #d6cdbd !important;
+}
+
+.aboutUsClass{
+    min-height: 600px;
+    min-width: 900px;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    color:#9d8758;
+    margin-top: 150px;
+}
+
+.aboutUsSubClass{
+
+    height: 100%;
+    width: 100%;
+    background-color: white;
+    padding:0px;
+    border-spacing: 0px;
+    position: relative;
+    margin-top: 50px;
+    text-align: left;
+    padding-left: 5%;
+    padding-right: 5%;
+
+}
+
+.listStyleNone{
+    list-style-type: none;
+    list-style: none;
+}
+.listStyleNone li:hover{
     background-color: #d6cdbd;
+    cursor: pointer;
+}
+.aboutUsListClass{
+    list-style-type: none;
+    text-align: left;
+    width:220px;
+    height:400px;
+}
+
+.aboutUsListClass li a{
+    color: black;
+    text-decoration: none;
+    display: block;
+}
+
+.aboutUsMainLiClass{
+    line-height: 50px;
+    max-height: 50px;
+    border-bottom: 2px solid #d6cdbd;
+    background-color: white;
+    cursor: pointer;
+}
+
+.tempoHoverClass{
+    display:inline-block; 
+    vertical-align:top;  
+    margin-top:3px; 
+    height:44px; 
+    max-width:7px; 
+    background-color:#d6cdbd;
+    color: #d6cdbd;
+    visibility: hidden;
 }
